Major improvements -- let's discuss

--- a/Project.toml
+++ b/Project.toml
@@ -7,5 +7,6 @@ DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 LDSSim = "23356bb8-7963-4833-8f43-55c874cd6f29"
 Noise = "81d43f40-5267-43b7-ae1c-8b967f377efa"
+ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
