--- a/src/LDSSim/Project.toml
+++ b/src/LDSSim/Project.toml
@@ -4,6 +4,7 @@ authors = ["James Doss-Gollin <jdossgollin@rice.edu>"]
 version = "0.1.0"
 
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
